objects/ARA__c.object
<CustomObject>
    <fields>
        <fullName>Secondary_Category_Details__c</fullName>
        <label>Secondary Category Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Secondary_ARA_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CSC/PC Support</fullName>
                </value>
                <value>
                    <fullName>Customer Care Complaints</fullName>
                </value>
                <value>
                    <fullName>Feature Limitations</fullName>
                </value>
                <value>
                    <fullName>Flex</fullName>
                </value>
                <value>
                    <fullName>Missing/Non-Existent Feature</fullName>
                </value>
                <value>
                    <fullName>Non-CS Support Complaints</fullName>
                </value>
                <value>
                    <fullName>Not A Fit</fullName>
                </value>
                <value>
                    <fullName>Overall Support Complaints</fullName>
                </value>
                <value>
                    <fullName>Product Availability (downtime)</fullName>
                </value>
                <value>
                    <fullName>Product Quality (bugs)</fullName>
                </value>
                <value>
                    <fullName>Product Speed</fullName>
                </value>
                <value>
                    <fullName>Usability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ARAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seed_Account__c</fullName>
        <inlineHelpText>Was this ever a DS holdback, managed by the DS before AM?</inlineHelpText>
        <label>Seed Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Settlement_Amount__c</fullName>
        <label>Settlement Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <label>Severity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Fire Drill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_Client__c</fullName>
        <formula>Account__r.Share_of_Wallet_Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share of Wallet $ (Client)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Positive Progress</fullName>
                </value>
                <value>
                    <fullName>Negative Progress</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Escalated (to VP/Executive level)</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>On Ice</fullName>
                </value>
                <value>
                    <fullName>Closed Won - Pending</fullName>
                </value>
                <value>
                    <fullName>Closed Lost - Pending</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed-Resolved</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Closed-Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Plan__c</fullName>
        <label>Success Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TEV_Fiscal_Year__c</fullName>
        <formula>Account__r.Last_12_month_spent__c</formula>
        <label>TEV Last 12 mon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TSC Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ARAs_Escalations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Resolution_Date__c</fullName>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unqualified_Notes__c</fullName>
        <label>Unqualified Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below ACV Threshold</fullName>
                </value>
                <value>
                    <fullName>Opportunity is Dead</fullName>
                </value>
                <value>
                    <fullName>Unwilling Customer</fullName>
                </value>
                <value>
                    <fullName>Submitted for Tracking</fullName>
                </value>
                <value>
                    <fullName>Not Actionable</fullName>
                </value>
                <value>
                    <fullName>Signed Elsewhere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Up_for_Renewal__c</fullName>
        <formula>Account__r.Up_for_Renewal__c</formula>
        <label>$ Up for Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wallet_Size_Client__c</fullName>
        <formula>Account__r.Wallet_Size_Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Size $ (Client)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account__r.Website</formula>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Resume_Date__c</fullName>
        <label>Work Resume Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Contract_Years__c</fullName>
        <formula>TEXT(Opportunity__r.Years__c)</formula>
        <label># of Contract Years</label>
        <type>Text</type>
    </fields>
    <label>ARA/Escalation</label>
    <nameField>
        <displayFormat>ARA/E-{000000}</displayFormat>
        <label>ARA/Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARAs/Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>New_ARA</fullName>
        <active>true</active>
        <description>Account is at risk of non-renewal and the renewal is within the next 365 days. Renewal Opp must already exist.</description>
        <label>New ARA</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_Off_Escalation</fullName>
        <active>true</active>
        <description>Account is either at risk of non-renewal but not within 365 days of renewal date, or ARA manager involvement is needed to prevent a customer from becoming at risk of non-renewal.</description>
        <label>One-Off Escalation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Escalation</fullName>
        <active>true</active>
        <description>Submit for tracking purposes only when sales process is a significant point of concern. Associate to the NBB Opp.</description>
        <label>Sales Escalation</label>
    </recordTypes>
    <validationRules>
        <fullName>ARA_can_only_be_open</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
ISNEW(),
NOT(ISPICKVAL(Status__c,"Open"))
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>ARA can be submitted only in Open status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>App_Support_for_Product_Performance</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
 OR(ISPICKVAL(ARA_Category__c,"Product Performance"),
    ISPICKVAL(Secondary_ARA_Category__c,"Product Performance")),
 ISBLANK( Related_App_Support_Ticket_SF_Link__c ),
 NOT(ISCHANGED(Status__c))
)</errorConditionFormula>
        <errorDisplayField>Related_App_Support_Ticket_SF_Link__c</errorDisplayField>
        <errorMessage>Please enter Related App Support Ticket SF Link</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AssignedTo_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),

ISCHANGED(Assigned_To__c),
 
OR(
RecordTypeId = "012o00000012ZYw",/*New ARA*/
RecordTypeId = "012o00000012ZYx"),/*One-Off Escalation*/

AND(
$User.Username &lt;&gt; "ephelps@cvent.com" , 
$User.Username &lt;&gt; "kmorrissey@cvent.com",
$User.Username &lt;&gt; "tstevens@cvent.com",
$User.Username &lt;&gt; "rmacasieb@cvent.com")

)</errorConditionFormula>
        <errorMessage>You are not authorized to Assign this case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRC_Support_Field</fullName>
        <active>true</active>
        <description>No one except Erin Phelps, Kelly Morrissey, Tyler Stevens, Rachael Macaseib, Pearson Weems should be able to modify CRC Support field value</description>
        <errorConditionFormula>AND(

OR(RecordTypeId='012o00000012ZYw', /*New ARA*/
RecordTypeId='012o00000012ZYx'), /*One-Off Escalation*/ 

ISCHANGED(CRC_Support__c),
NOT(
OR(
$User.Email = 'ephelps@cvent.com',
$User.Email = 'kmorrissey@cvent.com',
$User.Email = 'tstevens@cvent.com',
$User.Email = 'rmacasieb@cvent.com',
$User.Email = 'pweems@cvent.com'
)
),

NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),
$User.Validation_Bypass__c = False,
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c /*Added to bypass rollup helper updates */ 

)</errorConditionFormula>
        <errorDisplayField>CRC_Support__c</errorDisplayField>
        <errorMessage>Contact assigned ARA Manager with request to update 'CRC Support' field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cart_Request_Cannot_be_unchecked</fullName>
        <active>false</active>
        <description>#	
11585978
Deactivated. #11696878</description>
        <errorConditionFormula>AND( 
Not( 
ISNEW() 
), 
ISCHANGED( CART_Request__c ), 
PRIORVALUE(CART_Request__c) = True 

)</errorConditionFormula>
        <errorDisplayField>CART_Request__c</errorDisplayField>
        <errorMessage>This field can not be unchecked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Category_Details_Req_New_ARA</fullName>
        <active>true</active>
        <description>If ARA Category/Secondary ARA Category is 'product' or 'Customer Support' then primary category details/Secondary Category details fields are mandatory to fill. This applicable to New ARA record type only</description>
        <errorConditionFormula>OR(

AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
OR(
ISPICKVAL(ARA_Category__c, "Product"),ISPICKVAL(ARA_Category__c, "Customer Support")),
ISPICKVAL(Primary_Category_Details__c,""),
RecordTypeId = '012o00000012ZYw'
),


AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
OR(
ISPICKVAL(Secondary_ARA_Category__c, "Product"),ISPICKVAL(Secondary_ARA_Category__c,"Customer Support")),
ISPICKVAL(Secondary_Category_Details__c,""),
RecordTypeId = '012o00000012ZYw'
)
)</errorConditionFormula>
        <errorMessage>Please Enter a Value in Primary Category Details/Secondary Category Details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Category_Details_Req_One_Off</fullName>
        <active>true</active>
        <description>If ARA Category is 'product' or 'Customer Support' then primary category details field is mandatory to fill. This applicable to One-Off record type only</description>
        <errorConditionFormula>AND
(
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
OR(ISPICKVAL(ARA_Category__c, "Product"),ISPICKVAL(ARA_Category__c, "Customer Support")), 
ISPICKVAL(Primary_Category_Details__c,""), 
RecordTypeId = '012o00000012ZYx' 
)</errorConditionFormula>
        <errorMessage>Please Enter a Value in Primary Category Details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClosedLost_Status_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), ISCHANGED(Status__c), 
$User.Id &lt;&gt; "00500000006scbJ", 
$User.Id &lt;&gt; "005o0000002Oj5j", 
RecordTypeId = "012o00000012ZYw", 
OR(
TEXT(PRIORVALUE(Status__c)) = "Closed-Lost",
TEXT(PRIORVALUE(Status__c)) = "Closed Won"
),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 
)</errorConditionFormula>
        <errorMessage>You are not authorized to change the status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Resolved_for_Oneoff_Escalation</fullName>
        <active>true</active>
        <description>Resolution Outcome field is mandatory to fill when status is CLOSED RESOLVED</description>
        <errorConditionFormula>AND(

RecordTypeId = '012o00000012ZYx',
ISPICKVAL(Status__c,"Closed-Resolved"),
ISBLANK(TEXT(Resolution_Outcome__c)),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com"))

)</errorConditionFormula>
        <errorDisplayField>Resolution_Outcome__c</errorDisplayField>
        <errorMessage>Please fill in Resolution Outcome</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Lost_Status_cannot_be_changed</fullName>
        <active>true</active>
        <description>Status can be changed to something else if currently it is Closed Lost/Closed Won</description>
        <errorConditionFormula>AND
(
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), ISCHANGED(Status__c), 
$User.Id &lt;&gt; "00500000006scbJ", 
$User.Id &lt;&gt; "005o0000002Oj5j", 
OR(RecordTypeId='012o00000012ZYw', /*New ARA*/ 
RecordTypeId='012o00000012ZYx'), /*One-Off Escalation*/ 
OR(
TEXT(PRIORVALUE(Status__c)) = "Closed-Lost",
TEXT(PRIORVALUE(Status__c)) = "Closed Won" 
)
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Contact Erin Phelps with request to update 'Status' field.'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateTime_of_Call_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), ISPICKVAL( Has_the_call_been_scheduled_with_custome__c,"Yes"),
ISBLANK(Date_Time_of_Call__c))</errorConditionFormula>
        <errorMessage>Date Time of call field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_AR_Cancellation_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
ISBLANK(Date_AR_Cancellation_Notice_Received__c),
ISPICKVAL(DOA__c,"Yes"),
RecordTypeId='012o00000012ZYw' /*New ARA*/ 
)</errorConditionFormula>
        <errorDisplayField>Date_AR_Cancellation_Notice_Received__c</errorDisplayField>
        <errorMessage>Input date you received notice of non-renewal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DeferredTeamVal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Status__c ,'Deferred'),
ISBLANK( text(Deferred_Team__c) ),
OR(
 RecordType.DeveloperName = 'New_ARA',
 RecordType.DeveloperName = 'Sales_Escalation'

),

NOT(CONTAINS( $User.Username,'deployment' ))
)</errorConditionFormula>
        <errorDisplayField>Deferred_Team__c</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deferred_Team_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(Status__c)
),
ISPICKVAL(Status__c, "Deferred"),
ISBLANK(Deferred_Notes__c),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com"))
)</errorConditionFormula>
        <errorDisplayField>Deferred_Notes__c</errorDisplayField>
        <errorMessage>Complete Deferred Team and Deferred Notes fields prior to saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enhancement_for_Product_Limitations</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
 OR(ISPICKVAL(ARA_Category__c,"Product Limitations"),
    ISPICKVAL(Secondary_ARA_Category__c,"Product Limitations")),
 ISBLANK( Related_Enhancement_Request_SF_Link__c ),
NOT(ISCHANGED(Status__c))
)</errorConditionFormula>
        <errorDisplayField>Related_Enhancement_Request_SF_Link__c</errorDisplayField>
        <errorMessage>Please enter Related Enhancement Request SF Link</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>More_Info_requested</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), INCLUDES(Remediation_Resources_Used__c,"Other"),
ISBLANK(Additional_Details__c))</errorConditionFormula>
        <errorMessage>Please fill Additional Detail Section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSP_Link_mandate_for_Professional_Servic</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
 OR(ISPICKVAL(ARA_Category__c,"Professional Services"),
    ISPICKVAL(Secondary_ARA_Category__c,"Professional Services")),RecordTypeId &lt;&gt; '012o00000012ZYx', 
 ISBLANK(Related_PSP_SF_Link__c),
NOT(ISCHANGED(Status__c))
)</errorConditionFormula>
        <errorDisplayField>Related_PSP_SF_Link__c</errorDisplayField>
        <errorMessage>Please enter Related PSP SF Link</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Performance_Product_Limitation</fullName>
        <active>true</active>
        <description>Primary category and Secondary category details are required if ARA Category or 2ndory ARA category are prod performance and prod limitation</description>
        <errorConditionFormula>OR(
AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
ISPICKVAL(ARA_Category__c,"Product Limitations"),
ISBLANK(TEXT(Primary_Category_Details__c)),
NOT(ISCHANGED(Status__c))),
AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
ISPICKVAL(ARA_Category__c,"Product Performance"),
ISBLANK(TEXT(Primary_Category_Details__c)),
NOT(ISCHANGED(Status__c))),


AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
ISPICKVAL(Secondary_ARA_Category__c,"Product Limitations"),
ISBLANK(TEXT(Secondary_Category_Details__c)),
NOT(ISCHANGED(Status__c))),
AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
ISPICKVAL(Secondary_ARA_Category__c,"Product Performance"),
ISBLANK(TEXT(Secondary_Category_Details__c)),
NOT(ISCHANGED(Status__c)))
)</errorConditionFormula>
        <errorMessage>Please choose relevant Primary Category Details/Secondary Category Details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Root_Cause_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISCHANGED( Status__c ),

TEXT(PRIORVALUE(Status__c))= "Open",

OR(
ISPICKVAL(Status__c ,"Working"),
ISPICKVAL(Status__c ,"Positive Progress"),
ISPICKVAL(Status__c ,"Negative Progress"),
ISPICKVAL(Status__c ,"Settlement"),
ISPICKVAL(Status__c ,"Escalated to VP/Executive level"),
ISPICKVAL(Status__c ,"Legal"),
ISPICKVAL(Status__c ,"On Ice"),
ISPICKVAL(Status__c ,"Closed Won"),
ISPICKVAL(Status__c ,"Closed-Lost"),
ISPICKVAL(Status__c ,"Closed-Resolved")
),

ISBLANK( Product_Root_Cause__c ),

NOT(CONTAINS( $User.Username , "deployment"))
)</errorConditionFormula>
        <errorDisplayField>Product_Root_Cause__c</errorDisplayField>
        <errorMessage>Product Root Cause is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RecordType_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND($User.Id &lt;&gt; '00500000006scbJ', $User.Id &lt;&gt; '00500000007Rp0w', NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
OR( 
AND( PRIORVALUE(RecordTypeId) ='012o00000012ZYx', RecordTypeId = '012o00000012bHp'), 
AND( PRIORVALUE(RecordTypeId) ='012o00000012bHp', RecordTypeId = '012o00000012ZYx'), 
AND( PRIORVALUE(RecordTypeId) ='012o00000012bHp', RecordTypeId = '012o00000012ZYw'), 
AND( PRIORVALUE(RecordTypeId) ='012o00000012ZYw', RecordTypeId = '012o00000012bHp') 
) 
), 

AND( 
$User.Id &lt;&gt; '005o0000002Oj5j', $User.Id&lt;&gt; "00500000007KEOt",$User.Id &lt;&gt; '00500000006scbJ',$User.Id &lt;&gt; '00500000007Rp0w', $User.Id &lt;&gt; '0051N000005ApnK', NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
OR( 
AND( PRIORVALUE(RecordTypeId) ='012o00000012ZYw', RecordTypeId = '012o00000012ZYx'), 
AND( PRIORVALUE(RecordTypeId) ='012o00000012ZYx', RecordTypeId = '012o00000012ZYw') 
) 
) 
)</errorConditionFormula>
        <errorMessage>Record Type cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remediation_fields_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(ISBLANK(ARA_Resolution_Details__c), 
ISPICKVAL(Remediation_Effort_Level__c,''), 
ISBLANK(Remediation_Resources_Used__c) 
), 

ISPICKVAL(Status__c,"Closed-Resolved"), 
RecordTypeId='012o00000012ZYx' /* One-Off Escalation */ 

)</errorConditionFormula>
        <errorMessage>Input content for Resolution Details, Remediation Effort Level, and Remediation Resources Used fields before closing case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Date_Time_of_Call</fullName>
        <active>true</active>
        <description>When 'Requested Action' field = 'Scheduled Call', and sub-field 'Has the customer call been scheduled' field = Yes, require input for the 'Date/Time of Call' field.</description>
        <errorConditionFormula>AND(
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),
$User.Validation_Bypass__c = False,
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c, /*Added to bypass rollup helper updates */ 

ISPICKVAL(Has_the_call_been_scheduled_with_custome__c,'Yes'),
ISBLANK(Date_Time_of_Call__c),
RecordTypeId='012o00000012ZYx' /*One-Off Escalation*/   
)</errorConditionFormula>
        <errorDisplayField>Date_Time_of_Call__c</errorDisplayField>
        <errorMessage>Please enter Date/Time of call</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Notes_w_Rating_ARA_Remediation</fullName>
        <active>true</active>
        <description>Require Notes w Rating ARA Remediation - if this field is not blank then notes should be entered to explain rating</description>
        <errorConditionFormula>if(
isblank(text( ARA_Remediation_Quality__c)),
isblank(ARARemediationQualityNotes__c) &lt;&gt; true,
isblank(ARARemediationQualityNotes__c) &lt;&gt; false)</errorConditionFormula>
        <errorDisplayField>ARA_Remediation_Quality__c</errorDisplayField>
        <errorMessage>ARA Remediation Quality Notes must be entered to explain the rating. 
No Notes should be entered if there is no rating</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Unqualified_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), ISPICKVAL(Status__c,"Unqualified"), ISCHANGED(Status__c), 
OR(ISBLANK(Unqualified_Notes__c),ISPICKVAL( Unqualified_Reason__c,"")),
 OR(RecordTypeId='012o00000012ZYw', /*New ARA*/ 
RecordTypeId='012o00000012ZYx') /*One-Off Escalation*/ 

)</errorConditionFormula>
        <errorMessage>Complete 'Unqualified Reason' and 'Unqualified Notes' fields before saving at an Unqualified Status Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_to_change_status_Unqualified</fullName>
        <active>true</active>
        <description># 11714664</description>
        <errorConditionFormula>AND( 
ISCHANGED(Status__c), 
TEXT(PRIORVALUE(Status__c)) = "Unqualified", 
$User.Id &lt;&gt; "00500000006scbJ", /* Erin Phelps */ 
$User.Id &lt;&gt; "005o0000002Oj5j", 
OR(RecordTypeId='012o00000012ZYw', /*New ARA*/ 
RecordTypeId='012o00000012ZYx'), /*One-Off Escalation*/ 
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Contact Erin Phelps with the request to update 'Status' field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Settlement_amount_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = 'New_ARA', 
ISPICKVAL( Status__c ,'Settlement'), 
ISBLANK( Settlement_Amount__c ), 
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 
)</errorConditionFormula>
        <errorDisplayField>Settlement_Amount__c</errorDisplayField>
        <errorMessage>Settlement Amount is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Settlement_amount_mandatory_for_OOE</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = 'One_Off_Escalation', 
ISPICKVAL( Resolution_Outcome__c ,'Settlement'), 
ISBLANK( Settlement_Amount__c ), 
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 
)</errorConditionFormula>
        <errorMessage>Settlement Amount is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Severity_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISNEW(),
ISPICKVAL(Severity_Level__c,''),
OR(RecordTypeId='012o00000012ZYw', /*New ARA*/
RecordTypeId='012o00000012ZYx'), /*One-Off Escalation*/

NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")), 
$User.Validation_Bypass__c = False, 
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c /*Added to bypass rollup helper updates */ 
)</errorConditionFormula>
        <errorDisplayField>Severity_Level__c</errorDisplayField>
        <errorMessage>Select value for 'Severity Level' field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TSC_Name_is_mandatory</fullName>
        <active>true</active>
        <description>If remediation resources used contains "TSC" then its mandatory to fill TSC Name field</description>
        <errorConditionFormula>AND(

INCLUDES(Remediation_Resources_Used__c,"Technical Sales Consultant"),
ISBLANK(TSC_Name__c),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com"))
)</errorConditionFormula>
        <errorDisplayField>TSC_Name__c</errorDisplayField>
        <errorMessage>Please choose a TSC Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Resume_Date_is_mandatory</fullName>
        <active>true</active>
        <description>case# 11571746</description>
        <errorConditionFormula>AND(

ISPICKVAL(Status__c,"On Ice"),
ISBLANK( Work_Resume_Date__c )
)</errorConditionFormula>
        <errorMessage>Add date to Work Resume Date field</errorMessage>
    </validationRules>
</CustomObject>